
2006-09-23  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc/xmldocs.make: added appid and changed directories to
		make appid for references work

2006-09-22  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc: first draft of manual

2006-09-21  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_ui.c, capture.c, main.c: made --gui no operation
		exit on CTRL-C from main.c rather than capture.c 
		(because I didn't find the place anymore myself ;) and
		this is more readable). Also added more telling debug
		statements
	* src/app_data.c: fixed missing localization for error messages
		on stdout (--gui no operation)
	* Makefile.am, configure.in, doc: omf.make, Makefile.am,
		xmldocs.make, doc/xvidcap-manual/Makefile.am,
		doc/xvidcap-manual/C/xvidcap-manual.xml: do no longer
		register doc with scrollkeeper on "install" target,
		use "make install-doc"

2006-09-19  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in, doc/xvidcap-manual/C: xvidcap-manual.xml, 
	  xvidcap-manual-C.omf:
		various modifications to make docbooks work and register
		with scrollkeeper
	* xvidcap.png, xvidcap.desktop, Makefile.am, 
	  debian: xvidcap.menu, postinst, postrm: various
		updates to create menu entries

2006-09-17  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc/*: initial import of xvidcap online docs

2006-09-11  Vincenzo Reale <smart2128@baslug.org>
	* po/it.po: added Italian translation

2006-09-11  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/gnome-xvidcap.glade: made main control not resizable
	* src/main.c: fixed segfault with --sync command line arg
	* po/de.po: fixed some translations

2006-09-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in: fixed libXmu detection in X11R6 paths,
		including setting runtime search path
	* ffmpeg-svn19513/libavformat/movenc.c, src/xtoffmpeg.c:
		fixed root cause for segfault in movenc.c and
		revert to original

2006-09-07  Karl H. Beckers  <karl.h.beckers@gmx.net>